# variolite

./: CMakeLists.txt  README.md  TestHelper.cmake
include/variolite/: all.hpp  fusion_adapt.hpp  ops.hpp  vector.hpp
include/variolite/bits/: arith_ops.hpp  assign_ops.hpp  binary.hpp  can_op.hpp  compound.hpp  construct.hpp  fusion_iter_mfuncs.hpp  fusion_iterator.hpp  fusion_seq_mfuncs.hpp  fusion_sequence.hpp  fusion_tag.hpp  fwd.hpp  permit.hpp  rel_ops.hpp  vec_base.hpp  vector.hpp
tests/: CMakeLists.txt
tests/base/: noswizzle.fail.cpp  size.pass.cpp  swizzle.pass.cpp
tests/ctor/: bad_arg_num.fail.cpp  ctor.pass.cpp  fuse_seq.pass.cpp
tests/internal/: construct.pass.cpp
tests/misc/: index.pass.cpp
